--- a/index.html
+++ b/index.html
@@ -168,6 +168,6 @@
     <section class="konec">
         <p>© Все на этом сайте защищено</p>
     </section>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
